[package]
name = "singularity-rs"
version = "0.0.1"
authors = ["Felix Karg <fkarg10@gmail.com"]
edition = "2018"

[dependencies]
amethyst = "0.13.0"
# amethyst = { git = "https://github.com/amethyst/amethyst", rev = "6cad3b88820f653ed18018ffc0dba005c6b345f9" }
# amethyst = { path = "../amethyst" }
log = { version = "0.4.6", features = ["serde"] }



[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
