[package]
name = "singularity-rs"
version = "0.0.1"
authors = ["Felix Karg <fkarg10@gmail.com"]
edition = "2018"

[dependencies]
amethyst = "0.13.2"
# amethyst = { path = "../amethyst" }
log = { version = "0.4.8", features = ["serde"] }



[features]
default = ["vulkan", "no-slow-safety-checks"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]
