[package]
name = "singularity-rs"
version = "0.0.2"
authors = ["Felix Karg <fkarg10@gmail.com"]
edition = "2018"

[dependencies]
amethyst = "0.13.2"
# amethyst = { path = "../amethyst" }
log = { version = "0.4.8", features = ["serde"] }
derivative = "1.0.3"
nalgebra = "0.18.1"



[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]
